# linear-algebra

./: AbstractMatrix.cpp  AbstractMatrix.h  AbstractVector.cpp  AbstractVector.h  CMakeLists.txt  Face3D.h  IMatrix.cpp  IMatrix.h  IRG.h  IVector.cpp  IVector.h  Matrix.cpp  Matrix.h  MatrixSubmatrixView.cpp  MatrixSubmatrixView.h  MatrixTransposeView.cpp  MatrixTransposeView.h  MatrixVectorView.cpp  MatrixVectorView.h  ObjectModel.h  Poly.h  Vector.cpp  Vector.h  VectorMatrixView.cpp  VectorMatrixView.h  Vertex3D.h  main.cpp
